# backend

./: .gitignore  CODE_OF_CONDUCT.md  Graphene-ServerSide-Plugin-Spec.md  README.md  SECURITY.md  config.py  genschema.py  main.py  pyproject.toml  requirements.txt
.config/: config_docker.yml  config_example.yml  docker_example.env
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: bug.md
.github/workflows/: pytest.yml
app/: server.py
app/models/: backend.py  channel.py  instance.py  note.py  user.py
app/models/prisma/: backend.prisma  channel.prisma  instance.prisma  note.prisma  schema.tmpl  user.prisma
app/routes/: __init__.py  avatar.py
app/routes/activitypub/: __init__.py  actors.py  box.py  nodeinfo.py  well_known.py
app/utils/: combine.py  exceptions.py  log.py  migrate.py  model_func.py  response.py
app/utils/activitypub/: actor.py  context.py
prisma/: schema.prisma
prisma/schema/: channels.prisma  meta.prisma  notes.prisma  schema.prisma  user.prisma
src/: process.py  well_known.py
src/app/: __init__.py  server.py
src/app/routes/: __init__.py  avatar.py
src/app/routes/activitypub/: __init__.py  actors.py  box.py  nodeinfo.py  well_known.py
src/app/utils/: responses.py
src/app/utils/activitypub/: actor.py
static/: PUT_THE_FRONTEND_DIRECTORY_HERE
tests/: test_main.py
