[project]
name = "Graphene-BE"
version = "0.1.0"
description = "Graphene's Backend Server"
authors = [
    {name = "Graphene-Fed", email = "amase.cocoa@gmail.com"},
]
dependencies = [
    "fastapi>=0.111.0",
    "aiohttp[speedups]>=3.9.5",
    "orjson>=3.10.3",
    "pycryptodome>=3.20.0",
#    "granian>=1.4.1",
    "bcrypt>=4.2.0",
    "joserfc>=1.0.0",
    "uvicorn[standard]>=0.30.0",
    "pyfiglet>=1.0.2",
    "redis[hiredis]>=5.0.4",
    "passlib[bcrypt]>=1.7.4",
    "prisma>=0.13.1",
    "activitypub-utils>=0.3.1.post1",
    "python-aid>=0.2.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
serve = "granian --interface asgi main:app"
"uvicorn:serve" = "uvicorn main:app"
dev = "fastapi dev main.py"
generate_schema = "python ./genschema.py"
# grapctl

[project.urls]
"Homepage" = "https://github.com/graphene-fed/Graphene-BE"
"Bug Tracker" = "https://github.com/graphene-fed/Graphene-BE/issues"