[project]
name = "Hol0BE"
version = "0.1.0"
description = "An Interconnected Extensible Microblogging PlatformðŸª"
authors = [
    {name = "AmaseCocoa", email = "amase.cocoa@gmail.com"},
]
dependencies = [
    "aiohttp[speedups]>=3.9.5",
    "aiofiles>=23.2.1",
    "pycryptodome>=3.20.0",
    #    "granian>=1.4.1",
    "boringavatars>=1.0.3",
    "bcrypt>=4.2.0",
    "joserfc>=1.0.0",
    "pyfiglet>=1.0.2",
    "redis[hiredis]>=5.0.4",
    "prisma>=0.13.1",
    "activitypub-utils>=0.3.1.post1",
    "python-aid>=0.2.1",
    "omegaconf>=2.3.0",
    "colorlog>=6.8.2",
    "robyn>=0.58.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "AGPL-3.0-only"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
serve = "python src/process.py --workers=5 --process=5"
test = "pytest --cov=./ --cov-report=xml"
migrate = "python app/utils/migrate.py"

[tool.pdm.dev-dependencies]
pytest = [
    "pytest>=8.3.1",
    "pytest-cov>=5.0.0",
]

[project.urls]
"Homepage" = "https://github.com/hol0-dev/backend"
"Bug Tracker" = "https://github.com/hol0-dev/backend/issues"